{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 103,
  "lineage": "a972d148-f16a-3a84-56a2-841daabd44e7",
  "resources": [
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "homelab",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "homelab",
            "metadata": [
              {
                "generation": 0,
                "name": "homelab",
                "resource_version": "50174",
                "uid": "b5ba3624-76b0-496c-9a46-d2e53026d218"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.flaresolverr",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "flaresolverr",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "flaresolverr",
            "metadata": [
              {
                "generation": 0,
                "name": "flaresolverr",
                "resource_version": "29467",
                "uid": "d22a49f6-2f15-4768-9450-40c4b46ccfc2"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.flaresolverr",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "flaresolverr",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "homelab/flaresolverr",
            "metadata": [
              {
                "generation": 0,
                "name": "flaresolverr",
                "namespace": "homelab",
                "resource_version": "50330",
                "uid": "e8ee0583-e786-4a49-b160-9dfd0ef092eb"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.17.145",
                "cluster_ips": [
                  "10.43.17.145"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30660,
                    "port": 8191,
                    "protocol": "TCP",
                    "target_port": "8191"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "flaresolverr"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "10.0.0.133"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.flaresolverr.kubernetes_config_map.flaresolverr_env",
            "module.flaresolverr.kubernetes_deployment.flaresolverr"
          ]
        }
      ]
    },
    {
      "module": "module.jellyfin",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "jellyfin",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jellyfin/jellyfin",
            "metadata": [
              {
                "annotations": {
                  "traefik.ingress.kubernetes.io/router.entrypoints": "web"
                },
                "generate_name": "",
                "generation": 2,
                "labels": {},
                "name": "jellyfin",
                "namespace": "jellyfin",
                "resource_version": "48462",
                "uid": "3488e978-08ed-47fc-9501-caaf2078a65b"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "traefik",
                "rule": [
                  {
                    "host": "jellyfin.homelab.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "jellyfin",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8096
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "10.0.0.133"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.jellyfin.kubernetes_deployment.jellyfin",
            "module.jellyfin.kubernetes_namespace.jellyfin",
            "module.jellyfin.kubernetes_service.jellyfin"
          ]
        }
      ]
    },
    {
      "module": "module.jellyfin",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "jellyfin",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jellyfin",
            "metadata": [
              {
                "generation": 0,
                "name": "jellyfin",
                "resource_version": "16355",
                "uid": "159e5b62-a9ae-4705-9efe-307dfbfdaa52"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.jellyfin",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "jellyfin",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "jellyfin/jellyfin",
            "metadata": [
              {
                "generation": 0,
                "name": "jellyfin",
                "namespace": "jellyfin",
                "resource_version": "48230",
                "uid": "0d58d866-3dc9-44e0-bc03-7ded2a6af6c5"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.108.238",
                "cluster_ips": [
                  "10.43.108.238"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "web",
                    "node_port": 31597,
                    "port": 8096,
                    "protocol": "TCP",
                    "target_port": "web"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "jellyfin"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "10.0.0.133"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.jellyfin.kubernetes_deployment.jellyfin",
            "module.jellyfin.kubernetes_namespace.jellyfin"
          ]
        }
      ]
    },
    {
      "module": "module.jellyseerr",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "jellyseerr",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "homelab/jellyseerr",
            "metadata": [
              {
                "annotations": {
                  "traefik.ingress.kubernetes.io/router.entrypoints": "web"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "jellyseerr",
                "namespace": "homelab",
                "resource_version": "50315",
                "uid": "0315a468-5ee0-4e5e-aae4-49e0e478c3ec"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "traefik",
                "rule": [
                  {
                    "host": "jellyseerr.homelab.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "jellyseerr",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 5055
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "10.0.0.133"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.jellyseerr.kubernetes_config_map.jellyseerr",
            "module.jellyseerr.kubernetes_deployment.jellyseerr",
            "module.jellyseerr.kubernetes_namespace.jellyseerr",
            "module.jellyseerr.kubernetes_service.jellyseerr"
          ]
        }
      ]
    },
    {
      "module": "module.jellyseerr",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "jellyseerr",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jellyseerr",
            "metadata": [
              {
                "generation": 0,
                "name": "jellyseerr",
                "resource_version": "24191",
                "uid": "d6b1a107-3fbb-41dd-b393-30e0ff318085"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.jellyseerr",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "jellyseerr",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "jellyseerr/jellyseerr",
            "metadata": [
              {
                "generation": 0,
                "name": "jellyseerr",
                "namespace": "jellyseerr",
                "resource_version": "48193",
                "uid": "2984cabc-1a41-46bf-900d-d42b71f71e2a"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.16.248",
                "cluster_ips": [
                  "10.43.16.248"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 30275,
                    "port": 5055,
                    "protocol": "TCP",
                    "target_port": "http"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "jellyseerr"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "10.0.0.133"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.jellyseerr.kubernetes_config_map.jellyseerr",
            "module.jellyseerr.kubernetes_deployment.jellyseerr",
            "module.jellyseerr.kubernetes_namespace.jellyseerr"
          ]
        }
      ]
    },
    {
      "module": "module.prowlarr",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "prowlarr",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "prowlarr/prowlarr",
            "metadata": [
              {
                "annotations": {
                  "traefik.ingress.kubernetes.io/router.entrypoints": "web"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "prowlarr",
                "namespace": "prowlarr",
                "resource_version": "48655",
                "uid": "459c2b90-4de2-43a9-b2b8-b4980922095d"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "traefik",
                "rule": [
                  {
                    "host": "prowlarr.homelab.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "prowlarr",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 9696
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "10.0.0.133"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prowlarr.kubernetes_config_map.prowlarr_env",
            "module.prowlarr.kubernetes_deployment.prowlarr",
            "module.prowlarr.kubernetes_namespace.prowlarr",
            "module.prowlarr.kubernetes_service.prowlarr"
          ]
        }
      ]
    },
    {
      "module": "module.prowlarr",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "prowlarr",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "prowlarr",
            "metadata": [
              {
                "generation": 0,
                "name": "prowlarr",
                "resource_version": "26428",
                "uid": "b222feb7-ad04-40d6-9fa4-887bebf43ac8"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.prowlarr",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "prowlarr",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "homelab/prowlarr",
            "metadata": [
              {
                "generation": 0,
                "name": "prowlarr",
                "namespace": "homelab",
                "resource_version": "50295",
                "uid": "eee9d411-072f-40f2-b0eb-5df1d7c7c300"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.234.242",
                "cluster_ips": [
                  "10.43.234.242"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 31337,
                    "port": 9696,
                    "protocol": "TCP",
                    "target_port": "9696"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "prowlarr"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "10.0.0.133"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.prowlarr.kubernetes_config_map.prowlarr_env",
            "module.prowlarr.kubernetes_deployment.prowlarr"
          ]
        }
      ]
    },
    {
      "module": "module.radarr",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "radarr",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "radarr/radarr",
            "metadata": [
              {
                "annotations": {
                  "traefik.ingress.kubernetes.io/router.entrypoints": "web"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "radarr",
                "namespace": "radarr",
                "resource_version": "48654",
                "uid": "d66c0ea6-e14a-4252-96e2-ea69890f342e"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "traefik",
                "rule": [
                  {
                    "host": "radarr.homelab.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "radarr",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 7878
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "10.0.0.133"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.radarr.kubernetes_config_map.radarr_env",
            "module.radarr.kubernetes_deployment.radarr",
            "module.radarr.kubernetes_namespace.radarr",
            "module.radarr.kubernetes_service.radarr"
          ]
        }
      ]
    },
    {
      "module": "module.radarr",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "radarr",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "radarr",
            "metadata": [
              {
                "generation": 0,
                "name": "radarr",
                "resource_version": "18288",
                "uid": "0d1ebba0-9a8e-4e91-b90f-57ee7aa0555b"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.radarr",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "radarr",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "homelab/radarr",
            "metadata": [
              {
                "generation": 0,
                "name": "radarr",
                "namespace": "homelab",
                "resource_version": "50299",
                "uid": "27576c4f-958f-4899-a497-130dc86ffb03"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.208.195",
                "cluster_ips": [
                  "10.43.208.195"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 32259,
                    "port": 7878,
                    "protocol": "TCP",
                    "target_port": "7878"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "radarr"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "10.0.0.133"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.radarr.kubernetes_config_map.radarr_env",
            "module.radarr.kubernetes_deployment.radarr"
          ]
        }
      ]
    }
  ]
}